Logement page : wrap tag issue fixed

--- a/src/styles/pages/_Logements.scss
+++ b/src/styles/pages/_Logements.scss
@@ -44,6 +44,7 @@
 
         .tagContent {
             display: flex;
+            flex-wrap: wrap;
 
             @media screen and (min-width: 768px) {
                 margin-top: 0px;
